Fixed spacing of SVGs and Content titles in component docs

--- a/packages/docs-site/src/components/presenters/post-article/post-article.scss
+++ b/packages/docs-site/src/components/presenters/post-article/post-article.scss
@@ -35,7 +35,7 @@ $text-color: #748999;
     margin: 0;
   }
 
-  > svg {
+  svg {
     width: 100%;
     margin-top: spacing(4);
 
